semester-7/CSE420/labs/lab-1/solution/y.output
Terminals which are not used

   FOR
   WHILE


State 57 conflicts: 1 shift/reduce


Grammar

    0 $accept: start $end

    1 start: program

    2 program: program unit
    3        | unit

    4 unit: func_definition
    5     | statement

    6 type_specifier: INT

    7 parameter_list: type_specifier ID
    8               | parameter_list COMMA type_specifier ID

    9 func_definition: type_specifier ID LPAREN parameter_list RPAREN compound_statement
   10                | type_specifier ID LPAREN RPAREN compound_statement

   11 compound_statement: LCURL statements RCURL
   12                   | LCURL RCURL

   13 statements: statements statement
   14           | statement

   15 expression_statement: expression SEMICOLON

   16 statement: compound_statement
   17          | expression_statement
   18          | IF LPAREN expression RPAREN statement
   19          | IF LPAREN expression RPAREN statement ELSE statement
   20          | RETURN expression SEMICOLON
   21          | PRINTLN LPAREN ID RPAREN SEMICOLON

   22 expression: logic_expression
   23           | variable ASSIGNOP logic_expression

   24 logic_expression: rel_expression

   25 rel_expression: simple_expression
   26               | simple_expression RELOP simple_expression

   27 simple_expression: term
   28                  | simple_expression ADDOP term

   29 term: unary_expression
   30     | term MULOP unary_expression

   31 unary_expression: factor

   32 factor: variable
   33       | CONST_INT
   34       | LPAREN expression RPAREN

   35 variable: ID


Terminals, with rules where they appear

$end (0) 0
error (256)
IF (258) 18 19
ELSE (259) 19
FOR (260)
WHILE (261)
INT (262) 6
RETURN (263) 20
LPAREN (264) 9 10 18 19 21 34
RPAREN (265) 9 10 18 19 21 34
LCURL (266) 11 12
RCURL (267) 11 12
SEMICOLON (268) 15 20 21
COMMA (269) 8
ID (270) 7 8 9 10 21 35
ASSIGNOP (271) 23
RELOP (272) 26
ADDOP (273) 28
MULOP (274) 30
CONST_INT (275) 33
PRINTLN (276) 21


Nonterminals, with rules where they appear

$accept (22)
    on left: 0
start (23)
    on left: 1, on right: 0
program (24)
    on left: 2 3, on right: 1 2
unit (25)
    on left: 4 5, on right: 2 3
type_specifier (26)
    on left: 6, on right: 7 8 9 10
parameter_list (27)
    on left: 7 8, on right: 8 9
func_definition (28)
    on left: 9 10, on right: 4
compound_statement (29)
    on left: 11 12, on right: 9 10 16
statements (30)
    on left: 13 14, on right: 11 13
expression_statement (31)
    on left: 15, on right: 17
statement (32)
    on left: 16 17 18 19 20 21, on right: 5 13 14 18 19
expression (33)
    on left: 22 23, on right: 15 18 19 20 34
logic_expression (34)
    on left: 24, on right: 22 23
rel_expression (35)
    on left: 25 26, on right: 24
simple_expression (36)
    on left: 27 28, on right: 25 26 28
term (37)
    on left: 29 30, on right: 27 28 30
unary_expression (38)
    on left: 31, on right: 29 30
factor (39)
    on left: 32 33 34, on right: 31
variable (40)
    on left: 35, on right: 23 32


state 0

    0 $accept: . start $end

    IF         shift, and go to state 1
    INT        shift, and go to state 2
    RETURN     shift, and go to state 3
    LPAREN     shift, and go to state 4
    LCURL      shift, and go to state 5
    ID         shift, and go to state 6
    CONST_INT  shift, and go to state 7
    PRINTLN    shift, and go to state 8

    start                 go to state 9
    program               go to state 10
    unit                  go to state 11
    type_specifier        go to state 12
    func_definition       go to state 13
    compound_statement    go to state 14
    expression_statement  go to state 15
    statement             go to state 16
    expression            go to state 17
    logic_expression      go to state 18
    rel_expression        go to state 19
    simple_expression     go to state 20
    term                  go to state 21
    unary_expression      go to state 22
    factor                go to state 23
    variable              go to state 24


state 1

   18 statement: IF . LPAREN expression RPAREN statement
   19          | IF . LPAREN expression RPAREN statement ELSE statement

    LPAREN  shift, and go to state 25


state 2

    6 type_specifier: INT .

    $default  reduce using rule 6 (type_specifier)


state 3

   20 statement: RETURN . expression SEMICOLON

    LPAREN     shift, and go to state 4
    ID         shift, and go to state 6
    CONST_INT  shift, and go to state 7

    expression         go to state 26
    logic_expression   go to state 18
    rel_expression     go to state 19
    simple_expression  go to state 20
    term               go to state 21
    unary_expression   go to state 22
    factor             go to state 23
    variable           go to state 24


state 4

   34 factor: LPAREN . expression RPAREN

    LPAREN     shift, and go to state 4
    ID         shift, and go to state 6
    CONST_INT  shift, and go to state 7

    expression         go to state 27
    logic_expression   go to state 18
    rel_expression     go to state 19
    simple_expression  go to state 20
    term               go to state 21
    unary_expression   go to state 22
    factor             go to state 23
    variable           go to state 24


state 5

   11 compound_statement: LCURL . statements RCURL
   12                   | LCURL . RCURL

    IF         shift, and go to state 1
    RETURN     shift, and go to state 3
    LPAREN     shift, and go to state 4
    LCURL      shift, and go to state 5
    RCURL      shift, and go to state 28
    ID         shift, and go to state 6
    CONST_INT  shift, and go to state 7
    PRINTLN    shift, and go to state 8

    compound_statement    go to state 14
    statements            go to state 29
    expression_statement  go to state 15
    statement             go to state 30
    expression            go to state 17
    logic_expression      go to state 18
    rel_expression        go to state 19
    simple_expression     go to state 20
    term                  go to state 21
    unary_expression      go to state 22
    factor                go to state 23
    variable              go to state 24


state 6

   35 variable: ID .

    $default  reduce using rule 35 (variable)


state 7

   33 factor: CONST_INT .

    $default  reduce using rule 33 (factor)


state 8

   21 statement: PRINTLN . LPAREN ID RPAREN SEMICOLON

    LPAREN  shift, and go to state 31


state 9

    0 $accept: start . $end

    $end  shift, and go to state 32


state 10

    1 start: program .
    2 program: program . unit

    IF         shift, and go to state 1
    INT        shift, and go to state 2
    RETURN     shift, and go to state 3
    LPAREN     shift, and go to state 4
    LCURL      shift, and go to state 5
    ID         shift, and go to state 6
    CONST_INT  shift, and go to state 7
    PRINTLN    shift, and go to state 8

    $default  reduce using rule 1 (start)

    unit                  go to state 33
    type_specifier        go to state 12
    func_definition       go to state 13
    compound_statement    go to state 14
    expression_statement  go to state 15
    statement             go to state 16
    expression            go to state 17
    logic_expression      go to state 18
    rel_expression        go to state 19
    simple_expression     go to state 20
    term                  go to state 21
    unary_expression      go to state 22
    factor                go to state 23
    variable              go to state 24


state 11

    3 program: unit .

    $default  reduce using rule 3 (program)


state 12

    9 func_definition: type_specifier . ID LPAREN parameter_list RPAREN compound_statement
   10                | type_specifier . ID LPAREN RPAREN compound_statement

    ID  shift, and go to state 34


state 13

    4 unit: func_definition .

    $default  reduce using rule 4 (unit)


state 14

   16 statement: compound_statement .

    $default  reduce using rule 16 (statement)


state 15

   17 statement: expression_statement .

    $default  reduce using rule 17 (statement)


state 16

    5 unit: statement .

    $default  reduce using rule 5 (unit)


state 17

   15 expression_statement: expression . SEMICOLON

    SEMICOLON  shift, and go to state 35


state 18

   22 expression: logic_expression .

    $default  reduce using rule 22 (expression)


state 19

   24 logic_expression: rel_expression .

    $default  reduce using rule 24 (logic_expression)


state 20

   25 rel_expression: simple_expression .
   26               | simple_expression . RELOP simple_expression
   28 simple_expression: simple_expression . ADDOP term

    RELOP  shift, and go to state 36
    ADDOP  shift, and go to state 37

    $default  reduce using rule 25 (rel_expression)


state 21

   27 simple_expression: term .
   30 term: term . MULOP unary_expression

    MULOP  shift, and go to state 38

    $default  reduce using rule 27 (simple_expression)


state 22

   29 term: unary_expression .

    $default  reduce using rule 29 (term)


state 23

   31 unary_expression: factor .

    $default  reduce using rule 31 (unary_expression)


state 24

   23 expression: variable . ASSIGNOP logic_expression
   32 factor: variable .

    ASSIGNOP  shift, and go to state 39

    $default  reduce using rule 32 (factor)


state 25

   18 statement: IF LPAREN . expression RPAREN statement
   19          | IF LPAREN . expression RPAREN statement ELSE statement

    LPAREN     shift, and go to state 4
    ID         shift, and go to state 6
    CONST_INT  shift, and go to state 7

    expression         go to state 40
    logic_expression   go to state 18
    rel_expression     go to state 19
    simple_expression  go to state 20
    term               go to state 21
    unary_expression   go to state 22
    factor             go to state 23
    variable           go to state 24


state 26

   20 statement: RETURN expression . SEMICOLON

    SEMICOLON  shift, and go to state 41


state 27

   34 factor: LPAREN expression . RPAREN

    RPAREN  shift, and go to state 42


state 28

   12 compound_statement: LCURL RCURL .

    $default  reduce using rule 12 (compound_statement)


state 29

   11 compound_statement: LCURL statements . RCURL
   13 statements: statements . statement

    IF         shift, and go to state 1
    RETURN     shift, and go to state 3
    LPAREN     shift, and go to state 4
    LCURL      shift, and go to state 5
    RCURL      shift, and go to state 43
    ID         shift, and go to state 6
    CONST_INT  shift, and go to state 7
    PRINTLN    shift, and go to state 8

    compound_statement    go to state 14
    expression_statement  go to state 15
    statement             go to state 44
    expression            go to state 17
    logic_expression      go to state 18
    rel_expression        go to state 19
    simple_expression     go to state 20
    term                  go to state 21
    unary_expression      go to state 22
    factor                go to state 23
    variable              go to state 24


state 30

   14 statements: statement .

    $default  reduce using rule 14 (statements)


state 31

   21 statement: PRINTLN LPAREN . ID RPAREN SEMICOLON

    ID  shift, and go to state 45


state 32

    0 $accept: start $end .

    $default  accept


state 33

    2 program: program unit .

    $default  reduce using rule 2 (program)


state 34

    9 func_definition: type_specifier ID . LPAREN parameter_list RPAREN compound_statement
   10                | type_specifier ID . LPAREN RPAREN compound_statement

    LPAREN  shift, and go to state 46


state 35

   15 expression_statement: expression SEMICOLON .

    $default  reduce using rule 15 (expression_statement)


state 36

   26 rel_expression: simple_expression RELOP . simple_expression

    LPAREN     shift, and go to state 4
    ID         shift, and go to state 6
    CONST_INT  shift, and go to state 7

    simple_expression  go to state 47
    term               go to state 21
    unary_expression   go to state 22
    factor             go to state 23
    variable           go to state 48


state 37

   28 simple_expression: simple_expression ADDOP . term

    LPAREN     shift, and go to state 4
    ID         shift, and go to state 6
    CONST_INT  shift, and go to state 7

    term              go to state 49
    unary_expression  go to state 22
    factor            go to state 23
    variable          go to state 48


state 38

   30 term: term MULOP . unary_expression

    LPAREN     shift, and go to state 4
    ID         shift, and go to state 6
    CONST_INT  shift, and go to state 7

    unary_expression  go to state 50
    factor            go to state 23
    variable          go to state 48


state 39

   23 expression: variable ASSIGNOP . logic_expression

    LPAREN     shift, and go to state 4
    ID         shift, and go to state 6
    CONST_INT  shift, and go to state 7

    logic_expression   go to state 51
    rel_expression     go to state 19
    simple_expression  go to state 20
    term               go to state 21
    unary_expression   go to state 22
    factor             go to state 23
    variable           go to state 48


state 40

   18 statement: IF LPAREN expression . RPAREN statement
   19          | IF LPAREN expression . RPAREN statement ELSE statement

    RPAREN  shift, and go to state 52


state 41

   20 statement: RETURN expression SEMICOLON .

    $default  reduce using rule 20 (statement)


state 42

   34 factor: LPAREN expression RPAREN .

    $default  reduce using rule 34 (factor)


state 43

   11 compound_statement: LCURL statements RCURL .

    $default  reduce using rule 11 (compound_statement)


state 44

   13 statements: statements statement .

    $default  reduce using rule 13 (statements)


state 45

   21 statement: PRINTLN LPAREN ID . RPAREN SEMICOLON

    RPAREN  shift, and go to state 53


state 46

    9 func_definition: type_specifier ID LPAREN . parameter_list RPAREN compound_statement
   10                | type_specifier ID LPAREN . RPAREN compound_statement

    INT     shift, and go to state 2
    RPAREN  shift, and go to state 54

    type_specifier  go to state 55
    parameter_list  go to state 56


state 47

   26 rel_expression: simple_expression RELOP simple_expression .
   28 simple_expression: simple_expression . ADDOP term

    ADDOP  shift, and go to state 37

    $default  reduce using rule 26 (rel_expression)


state 48

   32 factor: variable .

    $default  reduce using rule 32 (factor)


state 49

   28 simple_expression: simple_expression ADDOP term .
   30 term: term . MULOP unary_expression

    MULOP  shift, and go to state 38

    $default  reduce using rule 28 (simple_expression)


state 50

   30 term: term MULOP unary_expression .

    $default  reduce using rule 30 (term)


state 51

   23 expression: variable ASSIGNOP logic_expression .

    $default  reduce using rule 23 (expression)


state 52

   18 statement: IF LPAREN expression RPAREN . statement
   19          | IF LPAREN expression RPAREN . statement ELSE statement

    IF         shift, and go to state 1
    RETURN     shift, and go to state 3
    LPAREN     shift, and go to state 4
    LCURL      shift, and go to state 5
    ID         shift, and go to state 6
    CONST_INT  shift, and go to state 7
    PRINTLN    shift, and go to state 8

    compound_statement    go to state 14
    expression_statement  go to state 15
    statement             go to state 57
    expression            go to state 17
    logic_expression      go to state 18
    rel_expression        go to state 19
    simple_expression     go to state 20
    term                  go to state 21
    unary_expression      go to state 22
    factor                go to state 23
    variable              go to state 24


state 53

   21 statement: PRINTLN LPAREN ID RPAREN . SEMICOLON

    SEMICOLON  shift, and go to state 58


state 54

   10 func_definition: type_specifier ID LPAREN RPAREN . compound_statement

    LCURL  shift, and go to state 5

    compound_statement  go to state 59


state 55

    7 parameter_list: type_specifier . ID

    ID  shift, and go to state 60


state 56

    8 parameter_list: parameter_list . COMMA type_specifier ID
    9 func_definition: type_specifier ID LPAREN parameter_list . RPAREN compound_statement

    RPAREN  shift, and go to state 61
    COMMA   shift, and go to state 62


state 57

   18 statement: IF LPAREN expression RPAREN statement .
   19          | IF LPAREN expression RPAREN statement . ELSE statement

    ELSE  shift, and go to state 63

    ELSE      [reduce using rule 18 (statement)]
    $default  reduce using rule 18 (statement)


state 58

   21 statement: PRINTLN LPAREN ID RPAREN SEMICOLON .

    $default  reduce using rule 21 (statement)


state 59

   10 func_definition: type_specifier ID LPAREN RPAREN compound_statement .

    $default  reduce using rule 10 (func_definition)


state 60

    7 parameter_list: type_specifier ID .

    $default  reduce using rule 7 (parameter_list)


state 61

    9 func_definition: type_specifier ID LPAREN parameter_list RPAREN . compound_statement

    LCURL  shift, and go to state 5

    compound_statement  go to state 64


state 62

    8 parameter_list: parameter_list COMMA . type_specifier ID

    INT  shift, and go to state 2

    type_specifier  go to state 65


state 63

   19 statement: IF LPAREN expression RPAREN statement ELSE . statement

    IF         shift, and go to state 1
    RETURN     shift, and go to state 3
    LPAREN     shift, and go to state 4
    LCURL      shift, and go to state 5
    ID         shift, and go to state 6
    CONST_INT  shift, and go to state 7
    PRINTLN    shift, and go to state 8

    compound_statement    go to state 14
    expression_statement  go to state 15
    statement             go to state 66
    expression            go to state 17
    logic_expression      go to state 18
    rel_expression        go to state 19
    simple_expression     go to state 20
    term                  go to state 21
    unary_expression      go to state 22
    factor                go to state 23
    variable              go to state 24


state 64

    9 func_definition: type_specifier ID LPAREN parameter_list RPAREN compound_statement .

    $default  reduce using rule 9 (func_definition)


state 65

    8 parameter_list: parameter_list COMMA type_specifier . ID

    ID  shift, and go to state 67


state 66

   19 statement: IF LPAREN expression RPAREN statement ELSE statement .

    $default  reduce using rule 19 (statement)


state 67

    8 parameter_list: parameter_list COMMA type_specifier ID .

    $default  reduce using rule 8 (parameter_list)
